<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register_activity"
    android:background="#363636">

    <Space
        android:id="@+id/topSpace"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/textRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topSpace"
        android:textAlignment="center"
        android:textColor="#F5EDDA"
        android:textSize="48sp"
        android:fontFamily="@font/lobster"/>

    <FrameLayout
        android:id="@+id/frameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="137dp"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="37dp"
        android:layout_marginTop="37dp"
        app:layout_constraintTop_toBottomOf="@id/textRegister">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="14sp"
            android:textColor="#F5EDDA"/>

        <EditText
            android:id="@+id/nameRegisterInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="19dp"
            android:background="@drawable/inputbackground"
            android:inputType="text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="92dp"
            android:text="@string/email"
            android:textSize="14sp"
            android:textColor="#F5EDDA"/>

        <EditText
            android:id="@+id/emailRegisterInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="110dp"
            android:background="@drawable/inputbackground"
            android:inputType="text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="182dp"
            android:text="@string/password"
            android:textSize="14sp"
            android:textColor="#F5EDDA"/>

        <EditText
            android:id="@+id/passwordRegisterInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="200dp"
            android:background="@drawable/inputbackground"
            android:inputType="text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="270dp"
            android:text="@string/confirm_password"
            android:textSize="14sp"
            android:textColor="#F5EDDA"/>

        <EditText
            android:id="@+id/confirmInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="290dp"
            android:background="@drawable/inputbackground"
            android:inputType="text"/>

        <TextView
            android:id="@+id/loginInText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="Login In"
            android:textSize="14sp"
            android:textColor="#F5EDDA"
            android:layout_marginTop="360dp"
            android:layout_gravity="end"/>

    </FrameLayout>

    <Button
        android:id="@+id/buttonCreateRegister"
        android:layout_width="227dp"
        android:layout_height="63dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frameRegister"
        android:background="@drawable/background_button_login"
        android:text="@string/create"
        android:textSize="36sp"
        android:fontFamily="@font/lobster"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:layout_marginTop="170dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>