<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#363636"
    tools:context=".login_activity">


    <TextView
        android:id="@+id/textLogin"
        android:layout_width="316dp"
        android:layout_height="48dp"
        android:layout_marginTop="137dp"
        android:fontFamily="@font/lobster"
        android:text="Welcome Back!"
        android:textColor="#F5EDDA"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frameLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="137dp"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="37dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textLogin"
        android:layout_marginTop="76dp">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="14sp"
            android:textColor="#F5EDDA"/>
        
        <EditText
            android:id="@+id/inputE"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="19dp"
            android:background="@drawable/inputbackground"
            android:inputType="textEmailAddress"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="92dp"
            android:text="@string/password"
            android:textSize="14sp"
            android:textColor="#F5EDDA" />

        <EditText
            android:id="@+id/inputPsw"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="110dp"
            android:background="@drawable/inputbackground"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/checkboxRememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:layout_marginTop="180dp"
            android:textSize="14sp"
            android:textColor="#F5EDDA"/>

        <TextView
            android:id="@+id/registerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/register_me"
            android:textSize="14sp"
            android:textColor="#F5EDDA"
            android:layout_marginTop="185dp"
            android:layout_marginStart="250dp"/>


    </FrameLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="227dp"
        android:layout_height="63dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frameLogin"
        android:background="@drawable/background_button_login"
        android:text="Ok!"
        android:textSize="36sp"
        android:fontFamily="@font/lobster"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:layout_marginTop="300dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>